--- a/.github/workflows/query_poll.yml
+++ b/.github/workflows/query_poll.yml
@@ -3,6 +3,9 @@ on:
     gollum:
         # schedule:
         #     - cron: ''
+    workflow_dispatch:
+    push:
+        branches: master
 jobs:
     build:
         runs-on: ubuntu-latest
