fix secret syntax

--- a/.github/workflows/set_up_poll.yml
+++ b/.github/workflows/set_up_poll.yml
@@ -27,7 +27,7 @@ jobs:
           CONSUMER_KEY: ${{ secrets.CONSUMER_KEY }}
           CONSUMER_SECRET: ${{ secrets.CONSUMER_SECRET }}
           ACCESS_KEY: ${{ secrets.ACCESS_KEY }}
-          ACCESS_SECRET: ${{ ACCESS_SECRET }}
+          ACCESS_SECRET: ${{ secrets.ACCESS_SECRET }}
         run: |
           python set_up_poll.py
 
