--- a/.github/workflows/generate_poll.yml
+++ b/.github/workflows/generate_poll.yml
@@ -1,8 +1,8 @@
 name: generate_poll
 on:
   gollum:
-    # schedule:
-    #     - cron: ''
+      schedule:
+      - cron: '0 8 * * 1,3,5'
   workflow_dispatch:
 jobs:
   build:
