--- a/.github/workflows/poll_a_poll.yml
+++ b/.github/workflows/poll_a_poll.yml
@@ -1,9 +1,8 @@
 name: poll_a_poll
 on:
   gollum:
-    # schedule:
-    #     - cron: ''
-  workflow_dispatch:
+      schedule:
+      - cron: '0 8 * * 7,2,4'
 jobs:
   build:
     runs-on: ubuntu-latest
