--- a/.github/workflows/poll_a_poll.yml
+++ b/.github/workflows/poll_a_poll.yml
@@ -15,7 +15,7 @@ jobs:
           python-version: 3.7
 
       - name: Install Requirements
-        run: pip install -r pip_requirements/poll_a_poll_requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Execute Python script
         env:
