--- a/.github/workflows/generate_poll.yml
+++ b/.github/workflows/generate_poll.yml
@@ -27,4 +27,9 @@ jobs:
           WEPOLLUS_PASSWORD: ${{ secrets.WEPOLLUS_PASSWORD }}
         run: |
           python generate_poll.py
-
+      - name: Add & Commit
+        uses: EndBug/add-and-commit@v8.0.1
+        with:
+          add: 'suggestions.json'
+          default_author: github_actions
+          message: "updating suggestions.json - addition/removal of suggestions"
